<resources>
    <string name="app_name">InTouch</string>
    <string name="title_view">View</string>
    <string name="title_create">Create</string>
    <string name="title_calendar">Calendar</string>

    <string name="groups_spinner_title">Choose a group</string>
    <string name="send_notification">Send Notification</string>

    <string name="title">TITLE:</string>
    <string name="hint_title">title</string>
    <string name="description">DESCRIPTION:</string>
    <string name="hint_description">description</string>
    <string name="date">DATE:</string>
    <string name="hint_date">date</string>
    <string name="from">FROM:</string>
    <string name="hint_from">from</string>
    <string name="time">\@</string>
    <string name="hint_time">time</string>
    <string name="place">PLACE:</string>
    <string name="hint_place">place</string>
    <string name="host">HOSTED BY:</string>
    <string name="hint_host">host</string>
    <string name="notes">NOTES:</string>
    <string name="hint_notes">notes</string>
    <string name="body">BODY:</string>
    <string name="body_hint">body</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Abilitree</string>

    <string name="received_sent">Received/Sent</string>
    <string name="title_single_note">Title:</string>
    <string name="date_single_note">Date:</string>
    <string name="from_single_note">From:</string>
    <string name="message">Message:</string>
    <string name="hint_message">message</string>
    <string name="hint_message_edit">Put message here...</string>
    <string name="create_notification">Create Notification</string>

    <string name="reply_to_sender">Reply to Sender</string>
    <string name="reply_all">Reply All</string>

    <string-array name="custom_weekdays">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>
</resources>
