<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_text_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="15sp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"/>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="15sp"
            android:hint="@string/hint_title"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/date_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"/>

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="15sp"
            android:hint="@string/nov_4th"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/from_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/from_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="15sp"
            android:hint="@string/hint_from"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/body_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/body_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="15sp"
            android:hint="@string/body_hint"
            android:textColor="@android:color/black"/>


    </LinearLayout>
  </LinearLayout>

    <ImageView
        android:id="@+id/read_iv"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:src="@drawable/closed_letter"/>

</LinearLayout>